feat(reports): achieve 100% test completion with simplified report generation architecture
- Implement unified ReportOrchestrationService replacing multiple overlapping services
- Create ReportGenerationJobDto for simplified status display without real-time updates
- Add comprehensive status dashboard with manual refresh only (no auto-refresh)
- Convert CSS class locators to ID-based locators for improved test reliability
- Create student-report-incomplete-data-setup.sql for testing incomplete data scenarios
- Update all manual test scenarios from "Background Report Generation" to "Simplified Report Generation"
- Synchronize Playwright tests with simplified architecture removing bulk/individual complexity
- Fix strict mode violations in Playwright selectors using .first() consistently
- Resolve foreign key constraint issues in test cleanup SQL scripts
- Update templates to use unified ID strategy for better element targeting

Key architectural changes:
- Single generate button for all students processed one-by-one in background
- Status dashboard with server-side updates only (manual refresh required)
- Individual regeneration capability (delete old, calculate new, generate PDF)
- All download functionality fetches pre-generated PDF files
- Structured codebase to reuse PDF generation per student/term across workflows

All 7 StudentReportTest methods now pass: shouldGenerateAllStudentReportsWithSingleButton,
shouldRegenerateIndividualStudentReport, shouldProvideStatusDashboardFunctionality,
shouldProvidePreGeneratedPdfAccess, shouldHandleIncompleteStudentData,
shouldHandleEmptyTermGracefully, shouldGenerateCorrectPDFContent

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>